# camlink-renamer

./: README.md  pyproject.toml
src/: _main.py  utils.py
